<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <ImageView
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/tip_bluetooth" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-16dp"
        android:text="@string/mission_beacon_tip"
        android:textColor="@color/font_dark"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/ButtonCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/gt_button4_default_gray"
            android:text="@string/mission_beacon_cancel"
            android:textColor="@color/font_dark"
            android:textSize="20dp" />

        <View
            android:layout_width="8dp"
            android:layout_height="1dp" />

        <Button
            android:id="@+id/ButtonSetting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/gt_button4_default"
            android:text="@string/mission_beacon_setting"
            android:textColor="@color/font_white"
            android:textSize="20dp" />
    </LinearLayout>

</LinearLayout>